<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Headunit</string>
    <string name="app_service_title">Headunit</string>
	<string name="app_service_descr">RK3066 HeadUnit service running</string>

	<string name="toast_safe_volume">Set safe volume level</string>

	<string name="toast_calling_process">Calling: %s</string>
	<string name="toast_calling_error">Calling error: %d</string>

	<string name="toast_player_start">Starting player</string>

	<string name="ui_contact_title">Contact author</string>
	<string name="ui_contact_text">Write email to petro@petro.ws</string>

	<string name="ui_service_title">RK3066 HeadUnit Service</string>
	<string name="ui_service_enable">Service enable</string>
	<string name="ui_service_settings">Service advanced settings</string>

	<string name="ui_adv_settings_keys_cat">Steering wheel keys to media remap</string>
	<string name="ui_adv_settings_keys_enable_title">Enable media keys</string>
	<string name="ui_adv_settings_keys_enable_text">Make media players work from steering wheel</string>
	<string name="ui_adv_settings_keys_apps_title">Control methods</string>
	<string name="ui_adv_settings_keys_apps_text">Select methods/players for media commands</string>

    <string name="ui_adv_settings_keys_config_title">Configure keys</string>
    <string name="ui_adv_settings_keys_config_text">Configure steering wheel keys</string>

	<string name="ui_adv_settings_player_cat">Custom media player</string>
	<string name="ui_adv_settings_player_app_title">Select main player</string>
	<string name="ui_adv_settings_player_app_text">Select custom app as player for autostart, etc</string>
	<string name="ui_adv_settings_player_autoplay_title">Command play music</string>
	<string name="ui_adv_settings_player_autoplay_text">Send command to start music on headunit boot</string>
	<string name="ui_adv_settings_player_autorun_title">Launch player on service start</string>
	<string name="ui_adv_settings_player_autorun_text">Autorun custom music player on headunit boot</string>
	<string name="ui_adv_settings_player_phonerun_title">Launch player on PHONE button</string>
	<string name="ui_adv_settings_player_phonerun_text">Run custom music player on headunit "Phone" key</string>

	<string name="ui_adv_settings_caller_cat">Call from Android</string>
	<string name="ui_adv_settings_caller_enable_title">Enable call from Android</string>
	<string name="ui_adv_settings_caller_enable_text">Make a bluetooth call from Android app or phonebook request</string>
    <string name="ui_adv_settings_caller_app_title">True Contacts app</string>
    <string name="ui_adv_settings_caller_app_text">Press to open recommended app for Android contacts and calls</string>
	<string name="ui_adv_settings_caller_api_title">Bluetooth API version</string>
	<string name="ui_adv_settings_caller_api_text">Change this, if BT calls not working on your device</string>

	<string name="ui_adv_settings_svol_cat">Safe volume on start</string>
	<string name="ui_adv_settings_svol_enable_title">Set on start</string>
	<string name="ui_adv_settings_svol_enable_text">Apply safe volume on unit start</string>
    <string name="ui_adv_settings_svol_level_title">Apply level</string>
    <string name="ui_adv_settings_svol_level_text">Volume level to set</string>

	<string name="ui_adv_settings_toast_cat">Notifications</string>
	<string name="ui_adv_settings_toast_enable_title">Enable toast</string>
	<string name="ui_adv_settings_toast_enable_text">Show short message on all keys and events</string>

	<string name="ui_adv_settings_speedvol_cat">Speed volume adjustment</string>
	<string name="ui_adv_settings_speedvol_enable_title">Enable speed volume adjustment</string>
	<string name="ui_adv_settings_speedvol_enable_text">Adjusting volume depending on the speed of the car</string>
    <string name="ui_adv_settings_speedvol_speed_title">Speed levels</string>
    <string name="ui_adv_settings_speedvol_speed_text">Velocities on which the volume will be in/decreased</string>
    <string name="ui_adv_settings_speedvol_level_title">Change level</string>
    <string name="ui_adv_settings_speedvol_level_text">Value to change on every step</string>
	<string name="ui_adv_settings_speedvol_tol_title">Speed tolerance</string>
	<string name="ui_adv_settings_speedvol_tol_text">The volume will be in/decreased if the speed is higher/lower than the level +/- tolerance</string>

	<string name="ui_adv_settings_usbvol_cat">USB-DAC Volume (ALSA, ROOT required)</string>
	<string name="ui_adv_settings_usbvol_enable_title">Enable USB-DAC volume adjust</string>
	<string name="ui_adv_settings_usbvol_enable_text">Ajust USB-DAC volume by HeadUnit\'s controls</string>
    <string name="ui_adv_settings_usbvol_number_title">USB-DAC Card number in ALSA (N)</string>
    <string name="ui_adv_settings_usbvol_number_text">Can be determined by terminal command: alsa_aplay -l</string>
    <string name="ui_adv_settings_usbvol_name_title">Volume simple-control name</string>
    <string name="ui_adv_settings_usbvol_name_text">Use terminal command (N-see prev.): alsa_amixer -cN scontrols</string>

	<string name="wdg_history_title">HeadUnit Call History</string>
	<string name="wdg_history_unknown_contact">Unknown</string>

	<string name="appcontrol_name_media_buttons">Send Media Buttons</string>
	<string name="appcontrol_name_pcradio">PcRadio (ROOT required)</string>
	<string name="cfg_theme_title">Theme</string>
	<string name="cfg_theme_summary">Change the theme off the app</string>
	<string name="cfg_design_title">Design</string>
	<string name="theme_item_default">Device default</string>
	<string name="theme_item_light">Light</string>
	<string name="theme_item_dark">Dark</string>
	<string name="theme_item_black">Black</string>
</resources>
