<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory
        android:key="cat_toast"
        android:summary=""
        android:title="@string/ui_adv_settings_toast_cat" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="service.toast"
            android:summary="@string/ui_adv_settings_toast_enable_text"
            android:title="@string/ui_adv_settings_toast_enable_title" >
        </CheckBoxPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="keys"
        android:summary=""
        android:title="@string/ui_adv_settings_keys_cat" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="keys.enable"
            android:summary="@string/ui_adv_settings_keys_enable_text"
            android:title="@string/ui_adv_settings_keys_enable_title"
	        >
        </CheckBoxPreference>
	    <MultiSelectListPreference
		    android:key="keys.apps"
		    android:title="@string/ui_adv_settings_keys_apps_title"
		    android:summary="@string/ui_adv_settings_keys_apps_text"
		    android:defaultValue="@array/empty"
		    />

	    <!--
	<PreferenceScreen
		android:summary="@string/ui_adv_settings_keys_config_text"
		android:title="@string/ui_adv_settings_keys_config_title" >
		<intent android:action="com.petrows.mtcservice.configurekeys" />
	</PreferenceScreen>
	-->
    </PreferenceCategory>

	<PreferenceCategory
		android:key="player"
		android:summary=""
		android:title="@string/ui_adv_settings_player_cat" >

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="player.autoplay"
            android:summary="@string/ui_adv_settings_player_autoplay_text"
            android:title="@string/ui_adv_settings_player_autoplay_title"
            >
        </CheckBoxPreference>

		<PreferenceScreen
			android:title="@string/ui_adv_settings_player_app_title"
			android:summary="@string/ui_adv_settings_player_app_text"
			android:key="player_screen"
			>
			<intent android:action=".MediaAppActivity" />
		</PreferenceScreen>

        <CheckBoxPreference
			android:defaultValue="false"
			android:key="player.autorun"
			android:summary="@string/ui_adv_settings_player_autorun_text"
			android:title="@string/ui_adv_settings_player_autorun_title"
			>
		</CheckBoxPreference>
		<CheckBoxPreference
			android:defaultValue="false"
			android:key="player.phonerun"
			android:summary="@string/ui_adv_settings_player_phonerun_text"
			android:title="@string/ui_adv_settings_player_phonerun_title"
			>
		</CheckBoxPreference>
	</PreferenceCategory>

    <PreferenceCategory
        android:key="caller"
        android:summary=""
        android:title="@string/ui_adv_settings_caller_cat" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="caller.enable"
            android:summary="@string/ui_adv_settings_caller_enable_text"
            android:title="@string/ui_adv_settings_caller_enable_title" >
        </CheckBoxPreference>
	    <ListPreference
		    android:key="caller.api"
		    android:title="@string/ui_adv_settings_caller_api_title"
		    android:summary="@string/ui_adv_settings_caller_api_text"
		    android:defaultValue="0"
		    android:entries="@array/cfg_callapi_titles"
		    android:entryValues="@array/cfg_callapi_values"
		    >
		    </ListPreference>
	    <PreferenceScreen
		    android:summary="@string/ui_adv_settings_caller_app_text"
		    android:title="@string/ui_adv_settings_caller_app_title" >
		    <intent android:action="android.intent.action.VIEW"
		            android:data="https://play.google.com/store/apps/details?id=cz.psencik.com.android.contacts" />
	    </PreferenceScreen>

    </PreferenceCategory>
    <PreferenceCategory
        android:key="svol"
        android:summary=""
        android:title="@string/ui_adv_settings_svol_cat" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="svol.enable"
            android:summary="@string/ui_adv_settings_svol_enable_text"
            android:title="@string/ui_adv_settings_svol_enable_title" >
        </CheckBoxPreference>

        <EditTextPreference
            android:defaultValue="5"
            android:dependency="svol.enable"
            android:key="svol.level"
            android:summary="@string/ui_adv_settings_svol_level_text"
            android:title="@string/ui_adv_settings_svol_level_title" >
        </EditTextPreference>
    </PreferenceCategory>
    <PreferenceCategory
        android:key="cat_speed"
        android:summary=""
        android:title="@string/ui_adv_settings_speedvol_cat" >
        <CheckBoxPreference
            android:defaultValue="true"
            android:key="speed.enable"
            android:summary="@string/ui_adv_settings_speedvol_enable_text"
            android:title="@string/ui_adv_settings_speedvol_enable_title" >
        </CheckBoxPreference>

        <EditTextPreference
            android:defaultValue="@string/cfg_def_speed_values"
            android:dependency="speed.enable"
            android:key="speed.speedrange"
            android:summary="@string/ui_adv_settings_speedvol_speed_text"
            android:title="@string/ui_adv_settings_speedvol_speed_title" >
        </EditTextPreference>
        <EditTextPreference
            android:defaultValue="1"
            android:dependency="speed.enable"
            android:key="speed.speedvol"
            android:summary="@string/ui_adv_settings_speedvol_level_text"
            android:title="@string/ui_adv_settings_speedvol_level_title" >
        </EditTextPreference>
    </PreferenceCategory>

</PreferenceScreen>
